// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmpExpandableSection should render 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(AmpExpandableSection) title="Title">
        <AmpExpandableSection title="Title" classes={{...}} expanded={false} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]}>
          <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
            <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
              <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
            </SideEffect(NullComponent)>
          </HelmetWrapper>
          <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-1">
            <section className="MoovAmpExpandableSection-section-3">
              <WithStyles(Typography) variant="subtitle1" component="h3" className="MoovAmpExpandableSection-title-2">
                <Typography variant="subtitle1" component="h3" className="MoovAmpExpandableSection-title-2" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                  <h3 className="MuiTypography-root-8 MuiTypography-subtitle1-26 MoovAmpExpandableSection-title-2">
                    Title
                    <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-collapse-6">
                      <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-collapse-6">
                        <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-collapse-6">
                          <SvgIcon className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-collapse-6" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-43 MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-collapse-6" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </ExpandMoreIcon>
                    </pure(ExpandMoreIcon)>
                    <pure(ExpandLessIcon) className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-expand-5">
                      <ExpandLessIcon className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-expand-5">
                        <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-expand-5">
                          <SvgIcon className="MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-expand-5" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-43 MoovAmpExpandableSection-toggle-4 MoovAmpExpandableSection-expand-5" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </ExpandLessIcon>
                    </pure(ExpandLessIcon)>
                  </h3>
                </Typography>
              </WithStyles(Typography)>
              <div className="MoovAmpExpandableSection-body-7">
                Foo
              </div>
            </section>
          </amp-accordion>
        </AmpExpandableSection>
      </WithStyles(AmpExpandableSection)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`AmpExpandableSection should render expanded 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(AmpExpandableSection) title="Title" expanded={true}>
        <AmpExpandableSection title="Title" expanded={true} classes={{...}} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]}>
          <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
            <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
              <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
            </SideEffect(NullComponent)>
          </HelmetWrapper>
          <amp-accordion disable-session-states={true} class="MoovAmpExpandableSection-accordion-52">
            <section className="MoovAmpExpandableSection-section-54" expanded="">
              <WithStyles(Typography) variant="subtitle1" component="h3" className="MoovAmpExpandableSection-title-53">
                <Typography variant="subtitle1" component="h3" className="MoovAmpExpandableSection-title-53" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                  <h3 className="MuiTypography-root-59 MuiTypography-subtitle1-77 MoovAmpExpandableSection-title-53">
                    Title
                    <pure(ExpandMoreIcon) className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-collapse-57">
                      <ExpandMoreIcon className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-collapse-57">
                        <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-collapse-57">
                          <SvgIcon className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-collapse-57" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-94 MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-collapse-57" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </ExpandMoreIcon>
                    </pure(ExpandMoreIcon)>
                    <pure(ExpandLessIcon) className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-expand-56">
                      <ExpandLessIcon className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-expand-56">
                        <WithStyles(SvgIcon) className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-expand-56">
                          <SvgIcon className="MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-expand-56" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                            <svg className="MuiSvgIcon-root-94 MoovAmpExpandableSection-toggle-55 MoovAmpExpandableSection-expand-56" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                              <path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z" />
                              <path fill="none" d="M0 0h24v24H0z" />
                            </svg>
                          </SvgIcon>
                        </WithStyles(SvgIcon)>
                      </ExpandLessIcon>
                    </pure(ExpandLessIcon)>
                  </h3>
                </Typography>
              </WithStyles(Typography)>
              <div className="MoovAmpExpandableSection-body-58">
                Foo
              </div>
            </section>
          </amp-accordion>
        </AmpExpandableSection>
      </WithStyles(AmpExpandableSection)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
